Fix: drop nav menu on smaller screens backroung color from none to baige color

--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -672,6 +672,8 @@ footer{
 
     .nav-toggle:checked ~ nav{
       display: block;
+      height: auto;
+      background-color: #F8D0A1;
     }
 
     .nav-toggle-label{
